--- a/assets/css/geral.css
+++ b/assets/css/geral.css
@@ -2,9 +2,9 @@
 /* 1 - Header */
 /* 2 - Seção 1 */
 /* 3 - Seção 2 */
+/* 4 - Footer */
 
-/* Footer */
-
+/* Responsivo */
 
 /* 1 - Header */
 body{
@@ -144,7 +144,7 @@ header .navbarLeroLero li>a{
 }
 /* Fim - Seção 2 */
 
-/* Footer */
+/* 4 - Footer */
 footer{
     box-shadow: 0px -1px 6px 0px rgba(0,0,0,0.16);
     padding-top: 40px;
@@ -190,3 +190,71 @@ footer .copyrights{
     font-size: 15px;
 }
 /* Fim - Footer */
+
+
+/* Responsivo */
+@media (max-width: 1200px){
+    #section2 .card{
+        min-height: 470px;
+    }
+    #section2 .chipsClasses li{
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 991px){
+    header .navbarLeroLero ul{
+        opacity: 0;
+        transition: 0.2s;
+        position: fixed;
+        top: 0;
+        right: -250px;
+        height: 100vh;
+        background-color: #371B66;
+        width: 250px;
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    header .navbarLeroLero ul li{
+        display: block;
+        margin: 20px 0px;
+    }
+    #menuMobile{
+        display: block !important;
+        font-size: 25px;
+        color: #fff;
+        cursor: pointer;
+    }
+    header .navbarLeroLero .activeMenu{
+        display: block !important;
+        transition: 0.2s;
+        opacity: 1;
+        right: 0;
+    }
+    .closeMobMenu{
+        position: absolute;
+        color: #fff;
+        font-size: 18px;
+        font-weight: 700;
+        display: block !important;
+        cursor: pointer;
+        padding: 20px;
+        right: 15px;
+        top: 5px;
+    }
+    .col-md-4{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    #section2 .card{
+        min-height: 420px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 767px){
+    .col-md-4{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
