--- a/assets/css/geral.css
+++ b/assets/css/geral.css
@@ -7,6 +7,7 @@
 
 /* Page - Sobre Nós */
 /* Page - Login */
+/* Page - Instrutores */
 
 /* Responsivo */
 
@@ -444,6 +445,88 @@ footer .copyrights{
   
 /* Fim - Login */
 
+/* Page - Instrutores */
+#instructors{
+    padding: 40px;
+}
+#instructors h2{
+    margin-top: 0px;
+    font-weight: 700;
+    position: relative;
+    margin-bottom: 40px;
+}
+#instructors h2:after{
+    position: absolute;
+    content: '';
+    z-index: -1;
+    background-color: #FFD728;
+    height: 18px;
+    bottom: 0px;
+    left: 0px;
+    width: 200px;
+}
+#instructors .card-img-top{
+    height: 280px;
+    object-fit: cover;
+}
+#instructors .col-md-3{
+    margin-bottom: 30px;
+}
+#instructors .card{
+    min-height: 481px;
+}
+
+.skill-bar-container {
+    position: relative;
+    width: 100%;
+    border-radius: 4px;
+    background-color: #CAA8FF;
+    margin-bottom: 0.5em;
+  }
+  .skill-bar-container .skill-bar {
+    display: block;
+    border-radius: 4px;
+    height: 25px;
+  }
+  .skill-bar-container .skill-bar.level1 {
+    width: 20%;
+    background-color: #4D2E7F;
+  }
+  .skill-bar-container .skill-bar.level2 {
+    width: 40%;
+    background-color: #4D2E7F;
+  }
+  .skill-bar-container .skill-bar.level3 {
+    width: 60%;
+    background-color: #4D2E7F;
+  }
+  .skill-bar-container .skill-bar.level4 {
+    width: 80%;
+    background-color: #4D2E7F;
+  }
+  .skill-bar-container .skill-bar.level5 {
+    width: 100%;
+    background-color: #4D2E7F;
+  }
+  .skill-bar-container .skill-name {
+    position: absolute;
+    top: 2px;
+    left: 10px;
+    font-weight: 600;
+    color: #fff;
+    font-size: 13px;
+  }
+  .skill-bar-container .skill-percent {
+    position: absolute;
+    top: 3px;
+    right: 10px;
+    color: #fff;
+    font-weight: 400;
+    font-size: 14px;
+  }
+  
+/* Fim - Instrutores */
+
 /* Responsivo */
 @media (max-width: 1200px){
     #section2 .card{
@@ -516,10 +599,18 @@ footer .copyrights{
         flex: 0 0 100%;
         max-width: 100%;
     }
+    #instructors .col-md-3{
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
 
 @media (max-width: 767px){
     .col-md-4{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    #instructors .col-md-3{
         flex: 0 0 100%;
         max-width: 100%;
     }
