--- a/assets/css/geral.css
+++ b/assets/css/geral.css
@@ -1,13 +1,17 @@
 /* Guia do CSS do Cursos Lero Lero **/
+
+/** Home **/
 /* 1 - Header */
 /* 2 - Seção 1 */
 /* 3 - Seção 2 */
 /* 4 - Footer */
 
-
+/** Páginas Internas **/
 /* Page - Sobre Nós */
 /* Page - Login */
 /* Page - Instrutores */
+/* Page - Comentários */
+/* Page - Registro */
 
 /* Responsivo */
 
@@ -249,7 +253,7 @@ footer .copyrights{
 #loginSection h4{
     margin-bottom: 10px;
 }
-.wrapper {
+#loginSection .wrapper {
     display: flex;
     align-items: center;
     flex-direction: column; 
@@ -258,7 +262,7 @@ footer .copyrights{
     min-height: 100%;
     padding: 20px;
   }
-  #formContent {
+  #loginSection #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
@@ -268,7 +272,7 @@ footer .copyrights{
     border: 1px solid rgba(0,0,0,0.2);
     padding: 40px 20px;
   }
-  #formFooter {
+  #loginSection #formFooter {
     background-color: #f6f6f6;
     border-top: 1px solid #dce8f1;
     padding: 25px;
@@ -276,14 +280,14 @@ footer .copyrights{
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
   }
-  h2.inactive {
+  #loginSection h2.inactive {
     color: #cccccc;
   }
-  h2.active {
+  #loginSection h2.active {
     color: #0d0d0d;
     border-bottom: 2px solid #5fbae9;
   }
-  input[type=button], input[type=submit], input[type=reset]  {
+  #loginSection input[type=button], input[type=submit], input[type=reset]  {
     background-color: #9A5CFF;
     border: none;
     color: white;
@@ -304,20 +308,20 @@ footer .copyrights{
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
-  input[type=submit]{
+  #loginSection input[type=submit]{
       margin-top: 20px;
   }
-  input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+  #loginSection input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
     background-color: #6C40B3;
   }
-  input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+  #loginSection input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
     -moz-transform: scale(0.95);
     -webkit-transform: scale(0.95);
     -o-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
   }
-  input[type=text] {
+  #loginSection input[type=text] {
     background-color: #f6f6f6;
     border: none;
     color: #0d0d0d;
@@ -337,11 +341,11 @@ footer .copyrights{
     -webkit-border-radius: 5px 5px 5px 5px;
     border-radius: 5px 5px 5px 5px;
   }
-  input[type=text]:focus {
+  #loginSection input[type=text]:focus {
     background-color: #fff;
     border-bottom: 2px solid #5fbae9;
   }
-  input[type=text]:placeholder {
+  #loginSection input[type=text]:placeholder {
     color: #cccccc;
   }
   /* ANIMAÇÕES */
@@ -526,6 +530,141 @@ footer .copyrights{
   }
   
 /* Fim - Instrutores */
+
+/* Page - Comentários */
+#commentsSection{
+    padding: 40px;
+}
+#commentsSection .boxDepoimentos{
+    padding: 30px;
+    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+}
+#commentsSection h2{
+    margin-top: 0px;
+    font-weight: 700;
+    position: relative;
+    margin-bottom: 40px;
+}
+#commentsSection h2:after{
+    position: absolute;
+    content: '';
+    z-index: -1;
+    background-color: #FFD728;
+    height: 18px;
+    bottom: 0px;
+    left: 0px;
+    width: 200px;
+}
+#commentsSection .boxDepoimentos p {
+    font-size: 14px;
+    margin-bottom: 15px;
+    font-weight: 100;
+    text-align: center;
+}
+#commentsSection .boxDepoimentos h4 {
+    margin-top: 12px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+}
+#commentsSection .boxDepoimentos h5 {
+    margin-top: 0px;
+    font-size: 14px;
+    font-weight: 300;
+}
+#commentsSection .imgDepoSec {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    height: 70px;
+    width: 70px;
+    margin: auto;
+    overflow: hidden;
+}
+#commentsSection .boxDepoimentos img {
+    margin-left: auto;
+}
+/* Fim - Comentários */
+
+/* Page - Registro */
+#registroSection{
+    padding: 40px 0px;
+}
+#registroSection label{
+    margin-top: 15px;
+}
+#registroSection h2{
+    margin-top: 0px;
+    font-weight: 700;
+    position: relative;
+    margin-bottom: 20px;
+}
+#registroSection h2:after{
+    position: absolute;
+    content: '';
+    z-index: -1;
+    background-color: #FFD728;
+    height: 18px;
+    bottom: 0px;
+    left: 0px;
+    width: 200px;
+}
+#registroSection input{
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 20px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    width: 100%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+#registroSection select{
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 20px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    width: 100%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+#registroSection .btn{
+    background-color: #9A5CFF;
+    border: none;
+    color: white;
+    padding: 15px 80px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    text-transform: uppercase;
+    font-size: 13px;
+    -webkit-box-shadow: 0 10px 30px 0 rgba(154,92,255,0.4);
+    box-shadow: 0 10px 30px 0 rgba(154,92,255,0.4);
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 30px auto 15px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+#registroSection .btn:hover{
+    background-color: #6C40B3;
+}
+/* Fim - Registro */
 
 /* Responsivo */
 @media (max-width: 1200px){
